Updated files and deleted unnecessary resources

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -190,10 +190,11 @@
           <a class="nav-link {% if current_page == 'blog' %}active{% endif %}" href="/blog">Blog</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2 search-input" type="search" placeholder="Search" aria-label="Search" style="border: 2px solid #66CDAA;">
-        <button class="btn btn-success search-button" style="color: black;" type="submit">Search</button>
-      </form>
+      <a href="../local_rec_sys/recommendation_script.zip" download>
+        <button class="btn btn-light" style="background-color: #66CDAA; color: black; font-weight: bold; border: none; padding: 10px 20px; border-radius: 5px; font-size: 16px; transition: background-color 0.3s ease;">
+        Offline Version
+        </button>
+      </a>
     </div>
   </div>
   </nav>
