updated linkedIn URL

--- a/templates/developer.html
+++ b/templates/developer.html
@@ -219,7 +219,7 @@
     <section class="contact">
       <h2 class="section-title">Contact Me</h2>
       <p>Email: shahonthefloor@gmail.com</p>
-      <p>LinkedIn: [Your LinkedIn URL]</p>
+      <p>LinkedIn: https://www.linkedin.com/in/mohak-shah-55a892286/</p>
     </section>
   </div>
 
