Solved bug for offline_file download

--- a/templates/developer.html
+++ b/templates/developer.html
@@ -173,7 +173,7 @@
           <a class="nav-link {% if current_page == 'blog' %}active{% endif %}" href="/blog">Blog</a>
         </li>
       </ul>
-      <a href="../local_rec_sys/recommendation_script.zip" download>
+      <a href="/download/offline_version" download>
         <button class="btn btn-light" style="background-color: #66CDAA; color: black; font-weight: bold; border: none; padding: 10px 20px; border-radius: 5px; font-size: 16px; transition: background-color 0.3s ease;">
         Offline Version
         </button>
