Added Hyperlinks in Dev Page

--- a/templates/developer.html
+++ b/templates/developer.html
@@ -218,8 +218,8 @@
 
     <section class="contact">
       <h2 class="section-title">Contact Me</h2>
-      <p>Email: shahonthefloor@gmail.com</p>
-      <p>LinkedIn: https://www.linkedin.com/in/mohak-shah-55a892286/</p>
+      <a href="shahonthefloor@gmail.com"> Email: shahonthefloor@gmail.com</a>
+      <a href="https://www.linkedin.com/in/mohak-shah-55a892286/">LinkedIn: https://www.linkedin.com/in/mohak-shah-55a892286/</a>
     </section>
   </div>
 
