Adjusted links on dev page

--- a/templates/developer.html
+++ b/templates/developer.html
@@ -218,8 +218,9 @@
 
     <section class="contact">
       <h2 class="section-title">Contact Me</h2>
-      <a href="shahonthefloor@gmail.com"> Email: shahonthefloor@gmail.com</a>
-      <a href="https://www.linkedin.com/in/mohak-shah-55a892286/">LinkedIn: https://www.linkedin.com/in/mohak-shah-55a892286/</a>
+      Email: <a href="mailto:shahonthefloor@gmail.com">shahonthefloor@gmail.com</a>
+      <br>
+      LinkedIn: <a href="https://www.linkedin.com/in/mohak-shah-55a892286/">https://www.linkedin.com/in/mohak-shah-55a892286/</a>
     </section>
   </div>
 
