--- a/templates/about.html
+++ b/templates/about.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Us - Health Care Center</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-<body>
-
   <style>
-    .navbar-nav .nav-item .nav-link {
+    <!-- .navbar-nav .nav-item .nav-link {
       transition: color 0.3s, background-color 0.3s;
       padding: 10px 15px; /* Consistent padding for all nav items */
       margin: 5px;
@@ -74,7 +71,7 @@
       height:50px;
       border: 2px solid black;
       border-radius:25px;
-    }
+    } -->
 
     .form-control {
       border: 2px solid #4CAF50; /* Green border for the input */
@@ -148,43 +145,9 @@
       margin: 8px 0;
     }
   </style>
-
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4B9CD3;">
-  <div class="container-fluid">
-    <div class="logo">
-      <img class="myimg" src="{{url_for('static', filename='img.png')}}" alt="">
-    </div>
-     <a class="navbar-brand">Health Center</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto py-4px">
-        <li class="nav-item">
-          <a class="nav-link {% if current_page == 'home' %}active{% endif %}" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link {% if current_page == 'about' %}active{% endif %}" href="/about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link {% if current_page == 'contact' %}active{% endif %}" href="/contact">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link {% if current_page == 'developer' %}active{% endif %}" href="/developer">Developer</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link {% if current_page == 'blog' %}active{% endif %}" href="/blog">Blog</a>
-        </li>
-      </ul>
-      <a href="/download/offline_version" download>
-        <button class="btn btn-light" style="background-color: #66CDAA; color: black; font-weight: bold; border: none; padding: 10px 20px; border-radius: 5px; font-size: 16px; transition: background-color 0.3s ease;">
-        Offline Version
-        </button>
-      </a>
-    </div>
-  </div>
-  </nav>
-
+</head>
+<body>
+  {% include 'navbar.html' %}
   <div class="container">
     <div class="header">
       <h1>Welcome to Health Care Center</h1>
@@ -227,9 +190,6 @@
       </div>
     </section>
   </div>
-
-
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
